--- a/ansible/roles/trmm_dev/templates/mesh.cfg.j2
+++ b/ansible/roles/trmm_dev/templates/mesh.cfg.j2
@@ -12,9 +12,9 @@
     "AllowHighQualityDesktop": true,
     "TlsOffload": "127.0.0.1",
     "agentCoreDump": false,
-    "Compression": true,
-    "WsCompression": true,
-    "AgentWsCompression": true,
+    "Compression": false,
+    "WsCompression": false,
+    "AgentWsCompression": false,
     "MaxInvalidLogin": { "time": 5, "count": 5, "coolofftime": 30 },
     "postgres": {
       "user": "{{ mesh_db_user }}",
